kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shiny-server
  name: shiny-server
  namespace: shiny-test-1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: shiny-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shiny-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 997
        runAsGroup: 997
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: rocker/shiny:4.4
          imagePullPolicy: "Always"
          name: shiny-server
          ports:
            - containerPort: 3838
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: 
              - ALL
          # env:
          #   - name: R_LIBS
          #     value: /R-lib:/usr/local/lib/R/site-library:/usr/local/lib/R/library
          volumeMounts:
            - name: shiny-app-volume
              mountPath: "/srv/shiny-server/"
              readOnly: true
            - name: r-library-volume
              mountPath: "/home/shiny/R/x86_64-pc-linux-gnu-library/4.4/"
              readOnly: true
          command: ["shiny-server"]
      volumes:
        - name: shiny-app-volume
          persistentVolumeClaim:
            claimName: app-pvc
        - name: r-library-volume
          persistentVolumeClaim:
            claimName: r-library-pvc
      restartPolicy: Always
status: {}
