kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shiny-server
  name: shiny-server
  namespace: shiny-test-1
spec:
  ports:
    - name: http
      port: 3838
      targetPort: 3838
  selector:
    app: shiny-server
status:
  loadBalancer: {}
